2005-10-05  Jonathan Graehl  <graehl@isi.edu>

	* os.hpp (safe_tmpnam): is_tmpnam_template, throw_last_error

	* Debug.h: default is debug object, not dbg pointer

2005-09-12  Jonathan Graehl  <graehl@isi.edu>

	* align.hpp: renamed ::align to ::align_up (some conflict with a
	gcc preprocessor macro?)

	* stackalloc.hpp: use align.hpp

	* swapbatch.hpp: use align.hpp

2005-08-19  Jonathan Graehl  <graehl@TRUE>

	* align.hpp: split from funcs.hpp

2005-08-18  Jonathan Graehl  <graehl@TRUE>

	* io.hpp (stringbuf): argc_argv (tested)

2005-06-23  Jonathan Graehl  <graehl@isi.edu>

	* tails_up_hypergraph.hpp: added comments (TailsUpHypergraph used
	to be RevHyperGraph in hypergraph.hpp)

2005-05-03  Jonathan Graehl  <graehl@isi.edu>

	* gzstream.C: throw exceptions when things fail (e.g. bad checksum
	on input, input file not found)

2005-04-28  Jonathan Graehl  <graehl@isi.edu>

	* main.hpp (MAIN_BEGIN): by default (unless SYNC_STDIO) unsync
	stdio and cerr for better performance.

2005-04-27  Jonathan Graehl  <graehl@isi.edu>

	* charbuf.hpp (getline_chomped): getline_chomped

	* graehl.mk (ALL_OBJS): $LIB e.g. -lz put in proper place in g++
	commandline (after objects)

	* fileargs.hpp (validate): open Infile as gzstream if ends in ".gz"

2005-04-13  Jonathan Graehl  <graehl@isi.edu>

	* fileargs.hpp (validate): added "-0" to stand for NULL
	input/output files (as distinct from /dev/null, you'll need to
	test them for NULL and not dereference)
	 (i.e. default_in_none and default_out_none)

2005-04-12  Jonathan Graehl  <graehl@isi.edu>

	* 2hash.h: visit_key_val

2005-04-07  Jonathan Graehl  <graehl@isi.edu>

	* genio.h (CREATE_INSERTER_T1): for classes with 1 template arg.

2005-03-30  Jonathan Graehl  <graehl@isi.edu>

	* io.hpp: unget in show_error_context to show the last (failed) char
	report file position before rading extra chars

	* dynarray.h: for reading arrays terminated by EOF, forgot to
	change undo_push_back_raw to pop_back (pop_back not being done