@@ -1,3 +1,10 @@
+2005-11-16  Jonathan Graehl  <graehl@isi.edu>
+
+	* info_debug.hpp: renamed from Debug.h (conflict with srilm's Debug.h)
+
+	* safe_db.hpp (class safe_db): renamed from SafeDb.h, and use
+	BOOST_STATIC_CONSTANT
+
 2005-10-05  Jonathan Graehl  <graehl@isi.edu>
 
 	* os.hpp (safe_tmpnam): is_tmpnam_template, throw_last_error
